--- a/template/index.html
+++ b/template/index.html
@@ -98,6 +98,9 @@
                     console.log('ok')
                 })
                 this.list.push(data)
+                this.name=''
+                this.grade=''
+                this.age=''
                 
 
               },
